<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lySchedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/imgTitle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imgDescription"
        android:src="@drawable/title" />

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/imgTitle"
        android:layout_toRightOf="@+id/imgTitle"
        android:gravity="center_vertical|left"
        android:text="@string/title" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/lblTitle"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@+id/lblTitle"
        android:background="@drawable/edittext_bg"
        android:singleLine="true" >
    </EditText>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imgTitle"
        android:layout_marginTop="5dp"
        android:background="#000" />

    <ImageView
        android:id="@+id/imgLocation"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/view1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imgDescription"
        android:src="@drawable/region" />

    <TextView
        android:id="@+id/lblLocation"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/imgLocation"
        android:layout_toRightOf="@+id/imgLocation"
        android:gravity="center_vertical|left"
        android:text="@string/location" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/lblLocation"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@+id/lblLocation"
        android:background="@drawable/edittext_bg"
        android:singleLine="true" >
    </EditText>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imgLocation"
        android:layout_marginTop="5dp"
        android:background="#000" />

    <ImageView
        android:id="@+id/imgStartTime"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/view2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imgDescription"
        android:src="@drawable/date" />

    <TextView
        android:id="@+id/lblStartTime"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/imgStartTime"
        android:layout_toRightOf="@+id/imgStartTime"
        android:gravity="center_vertical|left"
        android:text="@string/startTime" />

    <EditText
        android:id="@+id/editStartTime"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/lblStartTime"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@+id/lblStartTime"
        android:background="@null"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editStartTime2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/lblStartTime"
        android:layout_toRightOf="@+id/editStartTime"
        android:background="@null"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:singleLine="true" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imgStartTime"
        android:layout_marginTop="5dp"
        android:background="#000" />

    <ImageView
        android:id="@+id/imgLength"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/view3"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imgDescription"
        android:src="@drawable/duration" />

    <TextView
        android:id="@+id/lblLength"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/imgLength"
        android:layout_toRightOf="@+id/imgLength"
        android:gravity="center_vertical|left"
        android:text="@string/length" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imgLength"
        android:layout_marginTop="5dp"
        android:background="#000" />

    <EditText
        android:id="@+id/editHour"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/editStartTime"
        android:layout_alignTop="@+id/lblLength"
        android:background="@drawable/edittext_bg"
        android:gravity="center"
        android:inputType="number"
        android:singleLine="true" >
    </EditText>

    <TextView
        android:id="@+id/lblHour"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/editHour"
        android:layout_toRightOf="@+id/editHour"
        android:gravity="center"
        android:text="@string/hour" />

    <EditText
        android:id="@+id/editMinute"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/editHour"
        android:layout_toRightOf="@+id/lblHour"
        android:background="@drawable/edittext_bg"
        android:gravity="center"
        android:inputType="number"
        android:singleLine="true" >
    </EditText>

    <TextView
        android:id="@+id/lblMinute"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/editHour"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/editMinute"
        android:gravity="center"
        android:text="@string/minute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view4"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="#000"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/btnSave"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="#ff0000"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/btnDel"
            android:textColor="#fff" />
    </LinearLayout>

</RelativeLayout>